<resources>
    <string name="app_name">Bill Please</string>
    <string name="amount">Amount</string>
    <string name="enterAmount">Enter Amount</string>
    <string name="numOfPax">Num of Pax</string>
    <string name="enterNumOfPax">Enter num of pax</string>
    <string name="svs">SVS</string>
    <string name="noSVS">NO SVS</string>
    <string name="gst">GST</string>
    <string name="noGst">NO GST</string>
    <string name="discount">Discount (%)</string>
    <string name="enterDiscount">Enter discount</string>
    <string name="cash">Cash</string>
    <string name="paynow">PayNow</string>
    <string name="split">SPLIT</string>
    <string name="reset">RESET</string>
    <string name="totalAmt">Total</string>
    <string name="splitAmt">Split</string>
</resources>